# New-Folder-2-

New folder (2)/giga-system/: CODE_RESEARCH_REPORT.md  COMPREHENSIVE_CODE_REPORT.md  CONTRIBUTING.md  GREEK_MATHEMATICS.md  HONEST_SYSTEM_ANALYSIS.md  LICENSE  PHILOSOPHY.md  QUICK_START.py  QUICK_START_BACKUP.py  README.md  SYSTEM_DEEP_ANALYSIS.md  VISUAL_DATA_FLOW_DIAGRAMS.md  _audit_imports.py  demo_complete_system.py  demo_complete_system_BACKUP.py  environment.yml  giga_full_report.py  giga_system.duckdb  launch_giga_system.py  launch_giga_system_BACKUP.py  pyproject.toml  requirements-r.txt  requirements.txt  run_greek_research_lab.py  run_system_pipeline.py  setup.py  test_connection.py
New folder (2)/giga-system/account/: live_account.py
New folder (2)/giga-system/artifacts/: README.md  alpha_analysis_results.json  definitions.py
New folder (2)/giga-system/backtesting/: __init__.py  advanced_backtesting.py  benchmark.py  engine.py  metrics.py  performance.py  result_store.py  validator.py  visualization.py  walk_forward.py
New folder (2)/giga-system/brain/: state_machine.py
New folder (2)/giga-system/bridge/: __init__.py  data_bridge.py  data_converter.py  model_wrapper.py  r_bridge.py  research_live_bridge.py  rpy2_interface.py
New folder (2)/giga-system/config/: database_config.toml  models_config.toml  strategies_config.toml  system_config.toml
New folder (2)/giga-system/data/: __init__.py  database.py  database_layer.py  indicators.py  market_data.py  multi_exchange.py  preprocessing.py  storage_manager.py
New folder (2)/giga-system/data_samples/: README.md  btc_daily.csv  sample_options.csv
New folder (2)/giga-system/docker/: Dockerfile  docker-compose.yml
New folder (2)/giga-system/docs/: API_REFERENCE.md  ARCHITECTURE.md
New folder (2)/giga-system/execution/: __init__.py  binance_executor.py  execution_engine.py  instructions.py  latency_monitor.py  order_manager.py  order_router.py  smart_router.py
New folder (2)/giga-system/feedback/: adaptive_engine.py
New folder (2)/giga-system/models/: README.md
New folder (2)/giga-system/monitoring/: __init__.py  system_monitor.py
New folder (2)/giga-system/notebooks/: README.md
New folder (2)/giga-system/observer/: observer.py  state.json
New folder (2)/giga-system/optimization/: ai_optimizer.py  quantum_validation.py
New folder (2)/giga-system/reducer/: reducer.py
New folder (2)/giga-system/report_output/: GIGA_RESULTS.txt  run_log.txt
New folder (2)/giga-system/risk/: session_guard.py  strategy_breaker.py
(+167 files in other folders)
